fix distort view on dragging

--- a/src/app/modules/contracts/components/contract-overview-page/contract-overview-page.component.scss
+++ b/src/app/modules/contracts/components/contract-overview-page/contract-overview-page.component.scss
@@ -18,8 +18,3 @@
     top: 75%;
   }
 }
-::ng-deep {
-  .cdk-drag-preview {
-    border-radius: 0px;
-  }
-}
